<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CSM06</string>
    <string name="no_notes">There is no note. Add a new one from menu</string>
    <string name="menu_insert">Add a Note</string>
    <string name="menu_delete">Delete this Note</string>
    <string name="title">Title here</string>
    <string name="body">Body text</string>
    <string name="type">Type text</string>

    <string name="nodeType">Type</string>
    <string name="typeBasic">Normal</string>
    <string name="typeNormal">Important</string>
    <string name="typeEmergency">Urgent</string>



    <string name="Reminder">Note Reminder</string>
    <string name="ReminderMessage">You have a reminder, check your application.</string>


    <string name="confirm">Done</string>

    <string name="edit_note">Edit the Note</string>
    <string name="new_note">Create a Note</string>

    <string name="title_hint">Title here</string>
    <string name="no_title">No title</string>
    <string name="content_hint">Content here</string>

    <string name="set_alarm">Alarm has been set.</string>
    <string name="set_off_alarm">Alarm is off.</string>

    <string name="note_created">Note has been created.</string>
    <string name="note_updated">Note has been updated.</string>

    <string name="toggle_alarmOn">Change Alarm</string>
    <string name="toggle_alarmOff">Set Alarm</string>

    <string name="alarm_text">Alarm is not set</string>

    <string name="menu_about">About me</string>

    <string name="alarm">Alarm</string>
    <string name="alarm_time">Alarm: </string>
    <string name="miss_alarm">You missed the alarm</string>
    <string name="done">Done.</string>
    <string name="alarm_switch">Alarm</string>


</resources>
